# zkg-wlr

./: Cargo.toml  flake.nix  shell.nix
src/: config.rs  main.rs  menu.rs
