[package]
name = "zkg-wlr"
version = "0.0.1"
edition = "2021"
description = "Keymap manager for wlroots-based compositors"
repository = "https://github.com/MaxVerevkin/wlr-which-key/"
readme = "README.md"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverr@gmail.com>"]

[dependencies]
pangocairo = "0.20"
anyhow = "1"
libc = "0.2"
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.41.0", features = ["io-std", "io-util", "fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
wayrs-client = { version = "1.0", features = ["tokio"] }
wayrs-protocols = { version = "0.14", features = ["wlr-layer-shell-unstable-v1"] }
wayrs-utils = { version = "0.16", features = ["shm_alloc", "seats", "keyboard"] }
smart-default = "0.7.0"
clap = { version = "4.3.0", default-features = false, features = ["std", "derive", "help", "usage"] }

[profile.release]
lto = "fat"
